--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./src/image.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./src/assets/icons/market.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nan Market</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
